--- a/src/app/navBavcomponents/admin-navbar/admin-navbar.component.html
+++ b/src/app/navBavcomponents/admin-navbar/admin-navbar.component.html
@@ -4,10 +4,11 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="addProduct">addProduct</a>
+            
             
           </li>
           
@@ -33,18 +34,11 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li> -->
         </ul>
-        <form class="d-flex" style="float: none;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        
         <form class="d-flex"  >
-          
-            <button class="btn btn-outline-success" *ngIf="loginbutton == false" routerLink="login" (click)="login()" type="submit" >login</button>
-            <!-- <button class="btn btn-outline-success" *ngIf="loginbutton == true" routerLink="login" (click)="logout()" type="submit" >logout</button> -->
+           
+            <button class="btn btn-outline-success" *ngIf="loginbutton == false" routerLink="/login" (click)="login()" type="submit" >login</button>
+            <button class="btn btn-outline-success" *ngIf="loginbutton == true" routerLink="login" (click)="logout()" type="submit" >logout</button>
         </form>
       </div>
     </div>
