--- a/src/app/singup/singup.component.html
+++ b/src/app/singup/singup.component.html
@@ -55,6 +55,7 @@
             <div style="float:right;margin-top: 20px;">
              
               <button class="btn btn-info" type="submit" (click)="save()">sing up</button>
+              <button class="btn btn-info" type="submit" (click)="back()" style="margin-left: 20px;background-color: cadetblue;">back</button>
             </div>
             
           
