--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-admin-navbar></app-admin-navbar>
+<!-- <app-admin-navbar></app-admin-navbar> -->
+
+
 <!-- <app-public-navbar></app-public-navbar> -->
+
+<router-outlet></router-outlet>
