--- a/src/app/navBavcomponents/public-navbar/public-navbar.component.html
+++ b/src/app/navBavcomponents/public-navbar/public-navbar.component.html
@@ -1,41 +1,45 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">IT shop</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light" >
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">IT shop</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
           
-          <li class="nav-item dropdown">
+          
+        </li>
+        
+        <li class="nav-item dropdown">
+          
+          <!-- <div *ngIf="loginbutton == true">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              เล่นเกม
+              สินค้า
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">หูฟังเกมมิ่ง</a></li>
-              <li><a class="dropdown-item" href="#">คีบอร์ดเกมมิ่ง</a></li>
-              <!-- <li><hr class="dropdown-divider"></li> -->
-              <li><a class="dropdown-item" href="#">จอคอมเกมมิ่ง</a></li>
+              
+              
+              <li><a class="dropdown-item" routerLink="addProduct" routerLinkActive="active">เพิ่มสินค้า</a></li>
+              <li><a class="dropdown-item" routerLink="showproduct" routerLinkActive="active">สินค้าทั้งหมด</a></li>
+              <li><a class="dropdown-item" routerLink="modelProduct" routerLinkActive="active">โครงสร้างสินค้า</a></li>
+              <li><hr class="dropdown-divider"></li>
+              
             </ul>
-          </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li> -->
-        </ul>
-        <form class="d-flex" style="float: none;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-        <form class="d-flex">
-          <button class="btn btn-outline-success" type="submit" (click)="login()">login</button>
-        </form>
-      </div>
+          </div> -->
+          
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li> -->
+      </ul>
+      
+      <form class="d-flex"  >
+         
+          <button class="btn btn-outline-success"  routerLink="/login" (click)="login()" type="submit" >login</button>
+         
+      </form>
     </div>
-  </nav>
+  </div>
+</nav>
+<router-outlet></router-outlet>
