create table and search_bar

--- a/src/app/admin/add-product/add-product.component.css
+++ b/src/app/admin/add-product/add-product.component.css
@@ -1,3 +1,19 @@
 .col label {
-    margin-top: 30px;
+  margin-top: 30px;
+}
+
+.mat-stepper-horizontal {
+  margin-top: 8px;
+}
+
+.mat-form-field {
+  margin-top: 16px;
+}
+
+mat-grid-tile {
+    background: lightblue;
+}
+
+.inside {
+    background-color: slategray;
 }
