--- a/src/app/admin/add-spec/add-spec.component.css
+++ b/src/app/admin/add-spec/add-spec.component.css
@@ -3,11 +3,19 @@
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
 
+
+
+
 .circleButton {
     border-radius: 50px;
 }
 
 .circleButton:hover {
-    background: #494949;
-  }
+    background: #ffffff;
+}
+
+.style1{
+
+}
+
 
