--- a/src/app/side-navadmin/side-navadmin.component.html
+++ b/src/app/side-navadmin/side-navadmin.component.html
@@ -45,6 +45,7 @@
 
               <div class="menu-sidenav"><a routerLink="addSpec">addSpec</a></div>
               <div class="menu-sidenav"><a routerLink="addProduct">addProduct</a></div>
+              <div class="menu-sidenav"><a routerLink="stock">Stock</a></div>
             </mat-expansion-panel>
 
           </mat-accordion>
