--- a/src/app/admin/add-product/add-product.component.html
+++ b/src/app/admin/add-product/add-product.component.html
@@ -1,28 +1,83 @@
+<div class="container-fluid" style="background-color: rgb(255, 255, 255)">
+  <div class="row">
+    <div class="col-3" style="background-color: rgb(255, 255, 255)">Column</div>
+    <div
+      class="col-6"
+      style="background-color: rgb(255, 255, 255); margin-top: 5%"
+    >
+      <div class="mb-3 row">
+        <label for="inputPassword" class="col-sm-3 col-form-label"
+          >ประเภทสินค้า</label
+        >
+        <div class="col-sm-5">
+          <select
+            class="form-select"
+            aria-label="Default select example"
+            #model
+            [(ngModel)]="select"
+            (change)="onChangeModel()"
+          >
+            <option *ngFor="let item of specs">{{ item.name }}</option>
+          </select>
+        </div>
+      </div>
 
-<div class="container" style="margin-top: 50px;">
-    <div class="row">
-      <div class="col">
+      <br /><br />
+      <form #myForm >
+        <div *ngFor="let item of list;let i = index">
+          <div class="mb-3 row" >
+            <label class="col-sm-3 col-form-label">{{ item }}</label>
+            
+              <div class="col-sm-5" #div >
+                <input type="text" #myInput class="form-control"  (change)="onChangeSubSpec(item,myInput.value,i)" />
+              </div>
+            
+          </div>
+        </div>
+      </form>
+      
+
+      <div class="mb-3 row" >
+        <label class="col-sm-3 col-form-label">ราคา</label>
+        
+          <div class="col-sm-5" >
+            <input type="number" min="0" class="form-control" #myFormPrice  [(ngModel)]="product.value.price" oninput="validity.valid||(value='');"/>
+          </div>
         
       </div>
-      <div class="col">
-        <select class="form-select" aria-label="Default select example">
-            <option selected>Open this select menu</option>
-            <option value="1">Apple</option>
-            <option value="2">Intel</option>
-            <option value="3">AMD</option>
-        </select>
-
-        <label for="exampleFormControlInput1" class="form-label">ชื่อสินค้า</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" >
-
-        <label for="exampleFormControlInput1" class="form-label">ราคา</label>
-        <input type="number" min="0" class="form-control" id="exampleFormControlInput1" >
-
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      <div>
+        <mat-form-field appearance="fill" floatLabel="always">
+          <mat-label>Amount</mat-label>
+          <input matInput type="number" class="example-right-align" #myFormPriceMat min="0" placeholder="0" oninput="validity.valid||(value='');">
+          <span matPrefix>$&nbsp;</span>
+          <span matSuffix>.00</span>
+        </mat-form-field>
       </div>
-      <div class="col">
-        
+
+      <br><br>
+      <div>
+        <input type="file" class="form-control-file"  (change)="onChangeImg($event)">
       </div>
+      <br><br>
+    
+      <img *ngIf="previewLoaded" class="img-thumbnail" [src]="this.product.value.img" style="height:150px;">
+      <br><br>
+      <button type="button"  (click)="submitProduct()" class="btn btn-primary">submit</button>
+
+
+    </div>
+
+
+
+
+    <!-- start column 3 -->
+    <div class="col-3" style="background-color: rgb(255, 255, 255)">
+      
+      {{ product.value | json }}
+      <br><br><br>
+      ตัวที่จะส่งจริงๆ
+      {{ techSpec | json}}
+
     </div>
   </div>
+</div>
