--- a/src/app/admin/add-spec/add-spec.component.html
+++ b/src/app/admin/add-spec/add-spec.component.html
@@ -12,26 +12,40 @@
             <input type="text" class="form-control" formControlName="name" />
           </div>
         </div>
+        
 
         <div formArrayName="spec">
           <h4>คุณสมบัติ</h4>
           <div
             class="mb-3 row"
-            *ngFor="let spec of spec.controls; let i = index"
           >
+            <label for="inputPassword" class="col-sm-3 col-form-label">1</label>
+            <div class="col-sm-5">
+              <input type="text" class="form-control" value="model" readonly/>
+            </div>
+          </div>
+
+          <div
+           
+            *ngFor="let spec of spec.controls ;let i = index;"
+          >
+          <div  class="mb-3 row"  *ngIf="i === 0 ? false : true">
             <label for="inputPassword" class="col-sm-3 col-form-label">{{
-              i + 1
+              i+1
             }}</label>
             <div class="col-sm-5">
               <input type="text" class="form-control" [formControlName]="i" />
             </div>
             <button
+              
               type="reset"
               class="col-sm-2 btn btn-danger"
-              (click)="deleteSubSpec(i)"
+              (click)="deleteSubSpec(i+1)"
             >
               Delete
             </button>
+          </div>
+            
           </div>
         </div>
         <br />
