--- a/src/app/admin/stock/dialog-overview-example-dialog.html
+++ b/src/app/admin/stock/dialog-overview-example-dialog.html
@@ -1,1 +1,4 @@
-<app-stock-button></app-stock-button>
+<app-stock-button [item]="data"></app-stock-button>
+<!-- <p>
+    {{ data.model }}
+</p>       -->
