--- a/src/app/side-navadmin/side-navadmin.component.html
+++ b/src/app/side-navadmin/side-navadmin.component.html
@@ -15,13 +15,7 @@
 
 <mat-sidenav-container class="example-container">
       <mat-sidenav #sidenav [mode]="mode.value" opened>
-          <div style="width: 150px;">
-              <div lass="menu-sidenav"><mat-icon  aria-hidden="false" aria-label="Example home icon">home</mat-icon> </div>
-              
-              
-          </div>
           <mat-accordion>
-
             <mat-expansion-panel >
               <mat-expansion-panel-header>
                 
@@ -32,7 +26,7 @@
                 </mat-panel-title>
               </mat-expansion-panel-header>
 
-              <div class="menu-sidenav"><a routerLink="firstContent"> first content </a></div> 
+              <div class="menu-sidenav">Home</div> 
             </mat-expansion-panel>
 
             <mat-expansion-panel (opened)="panelOpenState = true"
@@ -46,6 +40,17 @@
               <div class="menu-sidenav"><a routerLink="addSpec">addSpec</a></div>
               <div class="menu-sidenav"><a routerLink="addProduct">addProduct</a></div>
               <div class="menu-sidenav"><a routerLink="stock">Stock</a></div>
+              <!-- <div class="menu-sidenav"><a routerLink="tabProduct">Tab</a></div> -->
+            </mat-expansion-panel>
+            <mat-expansion-panel (opened)="panelOrderOpenState = true"
+                                 (closed)="panelOrderOpenState = false">
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  Order
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+
+              <div class="menu-sidenav"><a routerLink="addSpec">Order</a></div>
             </mat-expansion-panel>
 
           </mat-accordion>
