--- a/src/app/admin/stock/stock.component.html
+++ b/src/app/admin/stock/stock.component.html
@@ -13,6 +13,10 @@
           
           <div class="mat-elevation-z8">
             <table mat-table [dataSource]="dataSource" matSort>
+
+             
+                
+              
           
               <!-- ID Column -->
               <ng-container matColumnDef="model">
@@ -35,21 +39,36 @@
               <!-- Fruit Column -->
               <ng-container matColumnDef="stock">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> stock </th>
-                <td mat-cell *matCellDef="let row"> {{row.stock}} </td>
+                <td mat-cell *matCellDef="let row"> 
+                  
+                  <div style="display: inline-block; width:50px;margin: 8px 8px 8px 0;">
+                    {{row.stock}} 
+                  </div> 
+                  <div style="display: inline-block;">  
+                  <button  mat-raised-button class="setting-edit" (click)="openDialogStock(row)" >Edit</button>
+                  </div>
+              </td>
+            </ng-container>
+            
+            
+            <!-- edit Column -->
+            <ng-container matColumnDef="edit">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> setting </th>
+              <td mat-cell *matCellDef="let row"> 
+                  <mat-icon aria-hidden="false" class="setting-icon" aria-label="Example home icon" (click)="setting(row)">settings</mat-icon>
+                  <!-- <button mat-raised-button (click)="openDialog(row)">Edit</button> -->
+                </td>
+                
               </ng-container>
+           
 
               
-              <!-- edit Column -->
-              <ng-container matColumnDef="edit">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> edit stock </th>
-                <td mat-cell *matCellDef="let row"> 
-                  <button mat-raised-button (click)="openDialog()">Edit</button>
-                </td>
-              </ng-container>
-
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          
+
+                
+            
+              
               <!-- Row shown when there is no matching data. -->
               <tr class="mat-row" *matNoDataRow>
                 <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
