--- a/src/app/admin/add-spec/add-spec.component.html
+++ b/src/app/admin/add-spec/add-spec.component.html
@@ -1,12 +1,27 @@
-<div class="container" style="margin-top: 5%">
+<div class="container" style="margin-top: 5%;background-color: rgb(255, 255, 255);">
   <div class="row">
-    <div class="col-3">หน้าสำหรับสร้าง model ประเภทสินค้า</div>
+    <div class="col-3">
+      <h2>
+        รายการประเภทสินค้าที่มีในระบบ
+      </h2>
+      <!-- <mat-nav-list>
+        <a mat-list-item *ngFor="let item of DBSpecs" (click)="selectEdit(item)"> {{ item.name }} </a>
+     </mat-nav-list> -->
+     <div class="list-group" id="list-tab" role="tablist" >
+      <div class="list-group" id="list-tab" role="tablist">
+        <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" style="margin-bottom: 20px;"(click)="new()">เพิ่มรายการใหม่</a>
+        <a class="list-group-item list-group-item-action" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home" *ngFor="let item of DBSpecs" (click)="selectEdit(item)">{{ item.name }}
+         <button class="btn btn-danger" style="float: right;" (click)="DeleteSpec(item)">Delete</button> 
+        </a>
+      </div>
+    </div>
+    </div>
 
     <div class="col-6" style="background-color: rgb(255, 255, 255)">
       <form [formGroup]="model">
         <div class="mb-3 row">
           <label for="inputPassword" class="col-sm-3 col-form-label"
-            >ชื่อประเทภสินค้า</label
+            ><h3>ชื่อประเทภสินค้า</h3></label
           >
           <div class="col-sm-5">
             <input type="text" class="form-control" formControlName="name" />
@@ -15,13 +30,23 @@
         
 
         <div formArrayName="spec">
-          <h4>คุณสมบัติ</h4>
+          <h3>คุณสมบัติ</h3>
           <div
             class="mb-3 row"
           >
             <label for="inputPassword" class="col-sm-3 col-form-label">1</label>
             <div class="col-sm-5">
               <input type="text" class="form-control" value="model" readonly/>
+              <!-- <input type="text" style="margin-top:14px;" class="form-control" value="Brand" readonly/> -->
+            </div>
+          </div>
+          <div
+            class="mb-3 row"
+          >
+            <label for="inputPassword" class="col-sm-3 col-form-label">2</label>
+            <div class="col-sm-5">
+              <input type="text" class="form-control" value="Brand" readonly/>
+              <!-- <input type="text" style="margin-top:14px;" class="form-control" value="Brand" readonly/> -->
             </div>
           </div>
 
@@ -29,7 +54,7 @@
            
             *ngFor="let spec of spec.controls ;let i = index;"
           >
-          <div  class="mb-3 row"  *ngIf="i === 0 ? false : true">
+          <div  class="mb-3 row"  *ngIf="i < 2 ? false : true">
             <label for="inputPassword" class="col-sm-3 col-form-label">{{
               i+1
             }}</label>
@@ -38,9 +63,9 @@
             </div>
             <button
               
-              type="reset"
+              
               class="col-sm-2 btn btn-danger"
-              (click)="deleteSubSpec(i+1)"
+              (click)="deleteSubSpec(i)"
             >
               Delete
             </button>
@@ -69,10 +94,11 @@
         <div class="mb-3 row">
           <label class="col-sm-3 col-form-label"></label>
           <div style="float: right;margin-left: 45px;" class="col-sm-5" >
-            <button type="submit" class="btn btn-primary"   (click)="submit()">
-              บันทึก</button
-            >&nbsp;
-            <button type="reset" class="btn btn-danger">Reset</button>
+            <button type="submit" class="btn btn-warning"  *ngIf="!buttonmode" (click)="update()" style="margin-left: 50px;">อัพเดรต</button>
+             &nbsp;
+            <button type="submit" class="btn btn-primary" *ngIf="buttonmode"  (click)="submit()">บันทึก</button>
+             &nbsp;
+            <button class="btn btn-danger" (click)="reset()" *ngIf="buttonmode">Reset</button>
           </div>
         </div>
       </form>
