--- a/src/app/login-components/login-components.component.html
+++ b/src/app/login-components/login-components.component.html
@@ -18,6 +18,8 @@
           <div style="float:right;">
             <button class="btn btn-primary" type="submit" (click)="login()" style="margin-right: 10px;">login</button>
             <button class="btn btn-info" (click)="singUp()" type="submit"  style="margin-right: 10px;">sing up</button>
+            <button class="btn btn-secondary" (click)="resetPassword()" type="submit"  style="margin-right: 10px;">forgot password</button>
+
           </div>
         </form>
       </div>
