--- a/src/app/side-navadmin/side-navadmin.component.html
+++ b/src/app/side-navadmin/side-navadmin.component.html
@@ -9,7 +9,7 @@
 </mat-toolbar>
 
 
-<mat-sidenav-container class="example-container">
+<mat-sidenav-container class="example-container" style="background-color: rgb(255, 255, 255);">
       <mat-sidenav #sidenav [mode]="mode.value" opened>
           <mat-accordion>
             <mat-expansion-panel >
