--- a/src/app/admin/stock/stock.component.css
+++ b/src/app/admin/stock/stock.component.css
@@ -1,15 +1,22 @@
 table {
     width: 100%;
-  }
+}
   
-  .mat-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
-  
-  td, th {
-    width: 25%;
-  }
+.mat-form-field {
+  font-size: 20px;
+  width: 100%;
+}
+
+th{
+  background-color: rgb(177, 201, 247);
+}
+
+td, th {
+  font-size: 20px;
+  width: 10%;
+  /* text-align: center; */
+}
+
 
 .setting-edit:hover{
   background-color: dodgerblue;
