--- a/src/app/admin/stock/stock.component.html
+++ b/src/app/admin/stock/stock.component.html
@@ -16,20 +16,23 @@
           <div class="mat-elevation-z8">
             <table mat-table [dataSource]="dataSource" matSort>
 
-             
-                
-              
           
               <!-- ID Column -->
               <ng-container matColumnDef="model">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Model </th>
-                <td mat-cell *matCellDef="let row"> {{row.spec[0].value}} </td>
+                <td mat-cell *matCellDef="let row"> {{row.model}} </td>
               </ng-container>
           
               <!-- Progress Column -->
               <ng-container matColumnDef="brand">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Brand </th>
-                <td mat-cell *matCellDef="let row"> {{row.spec[1].value}} </td>
+                <td mat-cell *matCellDef="let row"> {{row.brand}} </td>
+              </ng-container>
+
+              <!-- Name Column -->
+              <ng-container matColumnDef="type">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+                <td mat-cell *matCellDef="let row"> {{row.type}} </td>
               </ng-container>
           
               <!-- Name Column -->
@@ -38,33 +41,39 @@
                 <td mat-cell *matCellDef="let row"> {{row.price}} </td>
               </ng-container>
           
-              <!-- Fruit Column -->
-              <ng-container matColumnDef="stock">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> stock </th>
-                <td mat-cell *matCellDef="let row"> 
-                  
-                  <div style="display: inline-block; width:50px;margin: 8px 8px 8px 0;">
-                    {{row.number}} 
-                  </div> 
-                  <!-- <div style="display: inline-block;">  
+              
+              
+
+               <!-- <div style="display: inline-block;">  
                   <button  mat-raised-button class="setting-edit" (click)="openDialogStock(row)" >Edit</button>
                   </div> -->
-              </td>
-            </ng-container>
+           <!-- Fruit Column -->
+            <ng-container matColumnDef="stock">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Stock </th>
+              <td mat-cell style="width: 200px;" *matCellDef="let row"> {{row.stock}} </td>
+            </ng-container>       
+                    
             
             
-            <!-- edit Column -->
+             <!-- edit Column -->   
             <ng-container matColumnDef="edit">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> setting </th>
-              <td mat-cell *matCellDef="let row"> 
-                  <mat-icon aria-hidden="false" class="setting-icon" aria-label="Example home icon" (click)="openDialogEditProductDetail(row)">settings</mat-icon>
-                  <!-- <button mat-raised-button (click)="openDialog(row)">Edit</button> -->
-              </td>
+              <th mat-header-cell  style="text-align: center;" *matHeaderCellDef #setting> setting </th>
+              <td mat-cell style="text-align: center;"  *matCellDef="let row" #setting>
                 
-              </ng-container>
-           
+                  <mat-icon aria-hidden="false" class="setting-icon" aria-label="Example home icon" (click)="openDialogEditProductDetail(row)">settings</mat-icon>
+    
+              </td>
+              <!-- <button mat-raised-button (click)="openDialog(row)">Edit</button> -->
+            </ng-container> 
+                  
+             
+            <!-- Date Column -->
+            <ng-container matColumnDef="date">
+              <th mat-header-cell style="text-align: center;padding-left: 58px;" *matHeaderCellDef mat-sort-header>Date</th>
+              <!-- <td mat-cell  *matCellDef="let row"> {{row.date}} </td> -->
+              <td mat-cell style="width: 200px;" *matCellDef="let row"> {{row.date | date:'dd-LL-yyyy HH:mm:ss'}} </td>
+            </ng-container>     
 
-              
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
@@ -80,9 +89,9 @@
             <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
           </div>
         </div>
-
         <div class="col">
           
         </div>
+        
     </div>
 </div>
