feature edit information ProductIT

--- a/src/app/admin/stock/dialog-edit-detail-product.html
+++ b/src/app/admin/stock/dialog-edit-detail-product.html
@@ -1,1 +1,2 @@
-<app-add-product [item]="data"></app-add-product>
+<!-- <app-add-product [item]="data"></app-add-product> -->
+<app-update-product [item]="data"></app-update-product>
