--- a/src/app/admin/stock/stock.component.html
+++ b/src/app/admin/stock/stock.component.html
@@ -57,7 +57,7 @@
             
              <!-- edit Column -->   
             <ng-container matColumnDef="edit">
-              <th mat-header-cell  style="text-align: center;" *matHeaderCellDef #setting> setting </th>
+              <th mat-header-cell  style="text-align: center;" *matHeaderCellDef #setting> Edit </th>
               <td mat-cell style="text-align: center;"  *matCellDef="let row" #setting>
                 
                   <mat-icon aria-hidden="false" class="setting-icon" aria-label="Example home icon" (click)="openDialogEditProductDetail(row)">settings</mat-icon>
