--- a/src/app/navBavcomponents/public-navbar/public-navbar.component.html
+++ b/src/app/navBavcomponents/public-navbar/public-navbar.component.html
@@ -1,45 +1,56 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light" >
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">IT shop</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          
-          
-        </li>
+<mat-toolbar color="primary">
+  
+  <span>IT Shop</span>
+  <span class="example-spacer"></span>
+  <button mat-flat-button color="warn" (click)="login()">log in</button>
+</mat-toolbar>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-3"></div>
+    <div class="col-6" style="height: 400px;">
+      <div id="carouselExampleFade" class="carousel slide" data-bs-ride="carousel">
         
-        <li class="nav-item dropdown">
-          
-          <!-- <div *ngIf="loginbutton == true">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              สินค้า
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              
-              
-              <li><a class="dropdown-item" routerLink="addProduct" routerLinkActive="active">เพิ่มสินค้า</a></li>
-              <li><a class="dropdown-item" routerLink="showproduct" routerLinkActive="active">สินค้าทั้งหมด</a></li>
-              <li><a class="dropdown-item" routerLink="modelProduct" routerLinkActive="active">โครงสร้างสินค้า</a></li>
-              <li><hr class="dropdown-divider"></li>
-              
-            </ul>
-          </div> -->
-          
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li> -->
-      </ul>
-      
-      <form class="d-flex"  >
-         
-          <button class="btn btn-outline-success"  routerLink="/login" (click)="login()" type="submit" >login</button>
-         
-      </form>
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="background-color: slategray;">
+          <div class="carousel-inner" style="margin-top: 50px;">
+            <div class="carousel-item active" data-bs-interval="2000">
+              <img src="http://localhost:3000/images/ac7bd9d5-f76e-4e28-a04b-af2d0ef523aa.jpeg" style="width: 100px;height: 300px;" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="http://localhost:3000/images/nopic.png" style="width: 100px;height: 300px;" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="http://localhost:3000/images/5244fdf3-b14e-470f-a577-3000ff9328e1.jpeg" style="width: 100px;height: 300px;" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
     </div>
+    </div>
+    <div class="col-3"></div>
+    <div class="col-1"></div>
+    <div class="col-10" style="background-color: coral;padding-left: 120px;">
+    
+      <div style="margin: 20px;display: inline-block;" *ngFor="let item of product">
+        <div class="card" style="width: 18rem;">
+          <img src="{{item.img}}" class="card-img-top" alt="..." style="height: 300px;">
+          <div class="card-body">
+            <p class="card-text">{{item.spec[0].name}}: {{item.spec[0].value}}</p>
+            <p class="card-text">{{item.spec[1].name}}: {{item.spec[1].value}}</p>
+            <p class="card-text">ราคา {{item.price}} บาท</p>
+            <mat-icon class="pageview-icon" (click)="openDialog(item)">pageview</mat-icon>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="col-1"></div>
   </div>
-</nav>
-<router-outlet></router-outlet>
+</div>
