--- a/src/app/side-navadmin/side-navadmin.component.html
+++ b/src/app/side-navadmin/side-navadmin.component.html
@@ -46,7 +46,7 @@
                 </mat-panel-title>
               </mat-expansion-panel-header>
 
-              <div class="menu-sidenav"><a routerLink="addSpec">Order</a></div>
+              <div class="menu-sidenav"><a routerLink="order">Order</a></div>
             </mat-expansion-panel>
 
           </mat-accordion>
