--- a/src/app/login-components/login-components.component.html
+++ b/src/app/login-components/login-components.component.html
@@ -1,4 +1,7 @@
-
+<mat-toolbar style="background-color: #303F9F;color: aliceblue;">
+  <span><a (click)="home()">IT Shop</a> </span>
+  <span class="example-spacer"></span>
+</mat-toolbar>
 <div class="container">
     <div class="row">
       <div class="col">
