fix position navbar, nevigate by state Token, user menu

--- a/src/app/navBavcomponents/public-navbar/public-navbar.component.html
+++ b/src/app/navBavcomponents/public-navbar/public-navbar.component.html
@@ -4,62 +4,4 @@
   <span class="example-spacer"></span>
   <button mat-flat-button color="warn" (click)="login()">log in</button>
 </mat-toolbar>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-3" style="background-color: #3F51B5;"></div>
-    <div class="col-6" style="height: 400px;background-color: #3F51B5;">
-      <div id="carouselExampleFade" class="carousel slide" data-bs-ride="carousel">
-        
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="background-color: slategray;">
-          <div class="carousel-inner" style="margin-top: 50px;">
-            <div class="carousel-item active" data-bs-interval="2000">
-              <img src="http://localhost:3000/images/ac7bd9d5-f76e-4e28-a04b-af2d0ef523aa.jpeg" style="width: 100px;height: 300px;" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <img src="http://localhost:3000/images/nopic.png" style="width: 100px;height: 300px;" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="http://localhost:3000/images/5244fdf3-b14e-470f-a577-3000ff9328e1.jpeg" style="width: 100px;height: 300px;" class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-
-    </div>
-    </div>
-    <div class="col-3" style="background-color: #3F51B5;" ></div>
-    <!-- menu select type Product -->
-    <div class="col-2" style="  border-right: 1px solid black;border-collapse: collapse;">
-      <mat-button-toggle-group style="display: block;margin-top: 50px;" name="fontStyle" aria-label="Font Style" >
-
-        <mat-button-toggle style="display: block;" (click)="FilterAll()" >All</mat-button-toggle>
-          <mat-button-toggle style="display: block;" (click)="Filter(item)" *ngFor="let item of specModel">{{item.name}}</mat-button-toggle>
-
-      </mat-button-toggle-group>
-    </div>
-    <!-- rgb(72, 94, 202) -->
-    <div class="col-10" style="padding-left: 120px;background-color: #FFFFFF;">
-    
-      <div style="margin: 20px;display: inline-block;" *ngFor="let item of filterdata">
-        <div class="card" style="width: 18rem;">
-          <img src="{{item.img}}" class="card-img-top" alt="..." style="height: 300px;">
-          <div class="card-body">
-            <p class="card-text">{{item.spec[0].name}}: {{item.spec[0].value}}</p>
-            <p class="card-text">{{item.spec[1].name}}: {{item.spec[1].value}}</p>
-            <p class="card-text">ราคา {{item.price}} บาท</p>
-            <mat-icon class="pageview-icon" (click)="openDialog(item)">pageview</mat-icon>
-          </div>
-        </div>
-      </div>
-
-    </div>
-   
-  </div>
-</div>
+<app-home></app-home>
