--- a/src/app/navBavcomponents/user-navbar/user-navbar.component.html
+++ b/src/app/navBavcomponents/user-navbar/user-navbar.component.html
@@ -1,46 +1,23 @@
-<mat-toolbar style="background-color: #303F9F;color: aliceblue;">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="sidenav.toggle()">
+<mat-toolbar fixed style="background-color: #303F9F;color: aliceblue;">
+  <!-- <div style="top:0;position:fixed;"> -->
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="sidenav.toggle()" *ngIf="state">
     <mat-icon>menu</mat-icon>
   </button>
   <span>IT Shop</span>
-  <span class="example-spacer"></span>
-  <span style="margin-right: 20px;">Role : <span style="color: yellow;">User</span></span> 
+  <span  class="example-spacer"></span>
+  <span style="margin-right: 20px;">{{decoded.role}} : <span style="color: yellow;">{{decoded.name}}</span></span> 
   <button mat-flat-button color="warn" (click)="logout()">log out</button>
+<!-- </div> -->
 </mat-toolbar>
 
 
 
 <mat-sidenav-container class="example-container" style="background-color: rgb(255, 255, 255);">
   <mat-sidenav #sidenav [mode]="mode.value" opened style="width: 200px;">
-      <!-- <mat-accordion >
- 
-
-
-        <mat-expansion-panel (opened)="panelOpenState = true"
-                             (closed)="panelOpenState = false"
-                             style="width: 100%;">
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              ข้อมูลผู้ใช้
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-
-        </mat-expansion-panel>
-        <mat-expansion-panel (opened)="panelOrderOpenState = true"
-                             (closed)="panelOrderOpenState = false">
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              ประวัติการซื้อ
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-
-        </mat-expansion-panel>
-
-      </mat-accordion> -->
       <mat-button-toggle-group style="display: block;" name="fontStyle" aria-label="Font Style" >
-        <mat-button-toggle style="display: block;" >สินค้า</mat-button-toggle>
+        <mat-button-toggle style="display: block;" (click)="home()" >สินค้า</mat-button-toggle>
         <mat-button-toggle style="display: block;" >ตะกร้าสินค้า</mat-button-toggle>
-        <mat-button-toggle style="display: block;" >ข้อมูลผู้ใช้</mat-button-toggle>
+        <mat-button-toggle style="display: block;" (click)="profile()">ข้อมูลผู้ใช้</mat-button-toggle>
         <mat-button-toggle style="display: block;" >ประวัติการซื้อ</mat-button-toggle>
       </mat-button-toggle-group>
   </mat-sidenav>
