delete img and push img to shopPageCollection

--- a/src/app/customer/home/home.component.html
+++ b/src/app/customer/home/home.component.html
@@ -8,13 +8,13 @@
           <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="background-color: slategray;">
             <div class="carousel-inner" style="margin-top: 50px;">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="http://localhost:3000/images/ac7bd9d5-f76e-4e28-a04b-af2d0ef523aa.jpeg" style="width: 100px;height: 300px;" class="d-block w-100" alt="...">
+                <img src="" style="width: 100px;height: 300px;" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="http://localhost:3000/images/nopic.png" style="width: 100px;height: 300px;" class="d-block w-100" alt="...">
+                <img src="" style="width: 100px;height: 300px;" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="http://localhost:3000/images/5244fdf3-b14e-470f-a577-3000ff9328e1.jpeg" style="width: 100px;height: 300px;" class="d-block w-100" alt="...">
+                <img src="" style="width: 100px;height: 300px;" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
