--- a/src/app/login-components/login-components.component.html
+++ b/src/app/login-components/login-components.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar style="background-color: #303F9F;color: aliceblue;">
-  <span><a (click)="home()">IT Shop</a> </span>
+  <span><a (click)="home()">{{nameShop}}</a> </span>
   <span class="example-spacer"></span>
 </mat-toolbar>
 <div class="container">
