--- a/src/app/navBavcomponents/public-navbar/public-navbar.component.html
+++ b/src/app/navBavcomponents/public-navbar/public-navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar style="background-color: #303F9F;color: aliceblue;">
   
-  <span>IT Shop</span>
+  <span>{{nameShop}}</span>
   <span class="example-spacer"></span>
   <button mat-flat-button color="warn" (click)="login()">log in</button>
 </mat-toolbar>
