--- a/src/app/admin/edit-content/edit-content.component.html
+++ b/src/app/admin/edit-content/edit-content.component.html
@@ -10,7 +10,7 @@
                   <label for="inputPassword" class="col-sm-2 fs-4 col-form-label">ชื่อร้าน</label>
                   <div class="col-sm-10">
                     <input type="text" style="width: 200px; display:inline-block;" class="form-control fs-4" [(ngModel)]="shopPage.nameShop">
-                    <button type="button" style="display:inline-block; margin-left: 30px;" class="btn btn-primary">บันทึก</button>
+                    <button type="button" style="display:inline-block; margin-left: 30px;" class="btn btn-primary" (click)="editNameShop()">บันทึก</button>
                   </div>
                 </div>
               </div>
@@ -22,21 +22,23 @@
 
           </div>
           <div class="col-4">
-            {{shopPage | json}}
+            
           </div>
           <!--  -->
           <div class="col-2">
             
           </div>
-          <div class="col-5" style="background-color: chocolate;">
-            <div class="card mb-3" *ngFor="let item of shopPage.img;let i = index;" style="max-width: 540px;background-color: steelblue;">
+          <div class="col-5" >
+            <br><br>
+            <hr>
+            <div class="card mb-3" *ngFor="let item of shopPage.img;let i = index;" style="max-width: 540px;background-color: #3F51B5;">
               <div class="row g-0">
                 <div class="col-md-5">
                   <img src="{{item}}" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-4">
                   <div class="card-body">
-                    <p class="fs-4">รูปลำดับที่ {{i+1}}</p>
+                    <p class="fs-4" style="color: #FFFFFF;">รูปลำดับที่ {{i+1}}</p>
                     <button type="button" class="btn btn-danger" (click)="delete(item)">Delete</button>
                   </div>
                 </div>
@@ -44,9 +46,10 @@
             </div>
             
           </div>
-          <div class="col-5" style="background-color: sandybrown;">
+          <div class="col-5" >
+            <br><br><hr>
             <div class="col-sm-6">
-              <div class="card">
+              <div class="card" style="background-color: #BDBDBD;">
                 <div class="card-body">
                   <h5 class="card-title fs-4">กดเลือกไฟล์รูปที่ต้องการเพิ่ม</h5>
                  
@@ -55,7 +58,7 @@
                     </div>
                     <img *ngIf="previewLoaded" class="img-thumbnail" [src]="addImg" style="height:150px;">
                   <div style="margin-top: 50px;">
-                    <button type="button" style="" class="btn btn-primary fs-5" (click)="pushNewImg()">เพิ่มรูปภาพ</button>
+                    <button type="button"  class="btn btn-primary fs-5" (click)="pushNewImg()" style="background-color: #FF4081;border-color: #FF4081;">เพิ่มรูปภาพ</button>
                   </div>
                 </div>
               </div>
