--- a/src/app/singup/singup.component.html
+++ b/src/app/singup/singup.component.html
@@ -22,6 +22,9 @@
               <input class="form-control" type="text" formControlName='name' placeholder="firstname lastname">
             </div>
           </form>
+      
+      
+          <!--           
             <hr style="margin-top: 30px;">
             
 
@@ -49,7 +52,7 @@
               <div>
                 
               </div>
-            </form>
+            </form> -->
             
   
             <div style="float:right;margin-top: 20px;">
