--- a/src/app/customer/home/home.component.html
+++ b/src/app/customer/home/home.component.html
@@ -5,7 +5,7 @@
       <div class="col-6" style="height: 400px;background-color: #3F51B5;">
         <div id="carouselExampleFade" class="carousel slide" data-bs-ride="carousel">
           
-          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="background-color: slategray;">
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" >
             <div class="carousel-inner" style="margin-top: 50px;">
               
               <div>
