--- a/src/app/customer/profile/profile.component.html
+++ b/src/app/customer/profile/profile.component.html
@@ -5,10 +5,10 @@
       </div>
       <div class="col" style="background-color:antiquewhite;">
         <div style="margin-top: 50px;width: 100%; border: 2px solid #000000;padding: 20px;">
-            <div class="mb-3">
+            <!-- <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label fs-5">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" [(ngModel)]="user.email">
-            </div>
+            </div> -->
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label fs-5">Name</label>
                 <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="name surname" [(ngModel)]="user.name">
@@ -36,8 +36,13 @@
                 </div>
                 <hr>
                 <div style="text-align: center;">
-                    <button type="button" class="btn btn-primary">save</button>
+                    <button type="button" class="btn btn-primary" (click)="updateProfile()">save</button>
                 </div>
+            </div>
+        </div>
+        <div style="margin-top: 50px;width: 100%; border: 2px solid #000000;padding: 20px;">
+            <div style="text-align: center;">
+                <button type="button" class="btn btn-primary">change Email</button>
             </div>
         </div>
         <div style="margin-top: 50px;width: 100%; border: 2px solid #000000;padding: 20px;">
